# myproject

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  partitions_app.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/jw_common/: CMakeLists.txt  jw_common.h
components/jw_espnow/: CMakeLists.txt  jw_espnow.c  jw_espnow.h
components/jw_log/: CMakeLists.txt  jw_log.c  jw_log.h
components/jw_peers/: CMakeLists.txt  jw_peers.c  jw_peers.h
components/jw_rtc/: CMakeLists.txt  jw_rtc.c  jw_rtc.h
components/jw_sdcard/: CMakeLists.txt  jw_sdcard.c  jw_sdcard.h
components/jw_server/: CMakeLists.txt  jw_keep_alive.c  jw_keep_alive.h  jw_server.c  jw_server.h  jw_server_core.c  jw_server_http.c  jw_server_ws.c
components/jw_server/html/: device.html  devices.html  footer_script.html  header_script.html  main.css  root copy.html  root.html
components/jw_wifi/: CMakeLists.txt  jw_wifi.c  jw_wifi.h
docs/: project_requirements.txt  project_workflow.txt  requirements.md
main/: CMakeLists.txt  index.html  main.c
